<resources>
    <string name="app_name">EduMusica</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="register">Register</string>
    <string name="REGISTER">REGISTER</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="intervalos">Intervalos</string>
    <string name="identifica_nel_intervalo">Identifica\nel intervalo</string>
    <string name="identifica_nla_melodia">Identifica\nla melodia</string>
    <string name="USUARIO">USUARIO</string>
    <string name="identifica_el_intervalo">Identifica\nel intervalo</string>
    <string name="identifica_la_melodia">Identifica\nla melodía</string>
    <string name="siguiente">Siguiente</string>
    <string name="pregunta">Pregunta: 0/10</string>
    <string name="puntuacion">Puntuación: 0</string>
    <string name="melodia_1">Melodía 1</string>
    <string name="melodia_2">Melodía 2</string>
    <string name="melodia_3">Melodía 3</string>
    <string name="melodia_4">Melodía 4</string>
    <string name="resolver">Resolver</string>
    <string name="imagen_melodia">Imagen de melodia</string>
    <string name="repite_password">Repite password</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="crear">CREAR</string>
    <string name="volver_a_inicio_de_sesi_n">Volver a inicio de sesión</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="puntuaci_n_0">Puntuación: 0</string>

    <!-- Audio File Names -->
    <string-array name="audios_melodias">
        <item>melodia1</item>
        <item>melodia2</item>
        <item>melodia3</item>
        <item>melodia4</item>
        <item>melodia5</item>
        <item>melodia6</item>
        <item>melodia7</item>
        <item>melodia8</item>
        <item>melodia9</item>
        <item>melodia10</item>
        <!-- Add more items as needed -->
    </string-array>

    <!-- Image File Names -->
    <string-array name="imagenes_melodias">
        <item>melodia1</item>
        <item>melodia2</item>
        <item>melodia3</item>
        <item>melodia4</item>
        <item>melodia5</item>
        <item>melodia6</item>
        <item>melodia7</item>
        <item>melodia8</item>
        <item>melodia9</item>
        <item>melodia10</item>
        <!-- Add more items as needed -->
    </string-array>

    <!-- Opciones de respuesta -->
    <string-array name="respuestas_intervalos">
        <item>Octava</item>
        <item>Segunda mayor</item>
        <item>Tercera mayor</item>
        <item>Cuarta justa</item>
        <item>Quinta justa</item>
        <item>Sexta mayor</item>
        <item>Séptima mayor</item>
    </string-array>

    <!-- Nombres de archivos de audio -->
    <string-array name="audios_intervalos">
        <item>octava</item>
        <item>segunda_mayor</item>
        <item>tercera_mayor</item>
        <item>cuarta_justa</item>
        <item>quinta_justa</item>
        <item>sexta_mayor</item>
        <item>septima_mayor</item>
    </string-array>


</resources>