<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JuegoMelodias"
    android:background="@drawable/background_image">


    <ImageView
        android:id="@+id/melodyImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagen_melodia" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/melodyImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/puntuacion"
        android:textSize="18sp" />

    <GridLayout
        android:id="@+id/answerGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melodia_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melodia_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melodia_3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melodia_4" />
    </GridLayout>

    <Button
        android:id="@+id/btnResolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answerGrid"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/resolver" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnResolver"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/siguiente"
        android:enabled="false" />

    <TextView
        android:id="@+id/questionCounterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnSiguiente"
        android:text="@string/pregunta"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

</RelativeLayout>